[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bst"
version = "0.1.0"
description = "A simple Binary Search Tree (BST) data structure in Python"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name="Ahmedhm1", email="ahhi9014@email.com" }
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
